--- a/css/kassa.css
+++ b/css/kassa.css
@@ -76,10 +76,12 @@ a {
     top:50%;
 }
 
+
 .btn {
+    background: rgb(164, 181, 164) !important;
     padding: 0.6rem 1.3rem;
     background-color: rgb(164, 181, 164);
-    border: 2px solid #040404;
+    border: 2px solid #040404 !important;
     font-size: 0.7rem;
     color: #040404;
     line-height: 1;
@@ -94,9 +96,10 @@ a {
     background-color: transparent;
     color: #040404;
     transform: scale(1.3);
-    border: 2px solid #040404;
+    border: 2px solid #040404 !important;
     font-weight: bold;
   }
+  
  
 
   .text{
@@ -184,6 +187,17 @@ a {
       text-transform: capitalize;
   }
   
+
+  .info-text{
+    color: rgba(4, 4, 4, 0.75);
+    /* margin: 10px 0; */
+    text-transform: none;
+   font-weight: bolder;
+   line-height: 1.6;
+   font-size: 16px;
+   
+   }
+
   .footer-title{
       font-size: 20px;
       font-weight: 700;
