--- a/css/kontakt.css
+++ b/css/kontakt.css
@@ -55,6 +55,29 @@ body{
 }
 
 
+.btn {
+  background: rgb(164, 181, 164) !important;
+  padding: 0.6rem 1.3rem;
+  background-color: rgb(164, 181, 164);
+  border: 2px solid #040404 !important;
+  font-size: 0.7rem;
+  color: #040404;
+  line-height: 1;
+  border-radius: 25px;
+  outline: none;
+  cursor: pointer;
+  transition: 0.3s;
+  margin: 0;
+}
+
+.btn:hover {
+  background-color: transparent;
+  color: #040404;
+  transform: scale(1.3);
+  border: 2px solid #040404 !important;
+  font-weight: bold;
+}
+
 
 /* 
 * {
@@ -174,24 +197,6 @@ textarea.input {
   transform: translateY(0);
 }
 
-.btn {
-  padding: 0.6rem 1.3rem;
-  background-color: rgb(164, 181, 164);
-  border: 2px solid #040404;
-  font-size: 0.95rem;
-  color: #040404;
-  line-height: 1;
-  border-radius: 25px;
-  outline: none;
-  cursor: pointer;
-  transition: 0.3s;
-  margin: 0;
-}
-
-.btn:hover {
-  background-color: transparent;
-  color: #040404;
-}
 
 .input-container span {
   position: absolute;
@@ -401,6 +406,39 @@ textarea.input {
 }
 
 
+/* mail ai  */
+
+form label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+form input,
+form textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+form button {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+
+
+
+
+
+
+
+/* footer */
 
 .credit{
   text-align: center;
@@ -473,6 +511,16 @@ footer{
     /* margin: 10px 0; */
     text-transform: capitalize;
 }
+
+.info-text{
+  color: rgba(4, 4, 4, 0.75);
+  /* margin: 10px 0; */
+  text-transform: none;
+ font-weight: bolder;
+ line-height: 1.6;
+ font-size: 16px;
+ 
+ }
 
 .footer-title{
     font-size: 20px;
