--- a/css/shop.css
+++ b/css/shop.css
@@ -48,6 +48,7 @@ a {
     }
    
 .header-user{
+
     color: rgb(11, 11, 11);
     transition: 0.3s;
    
@@ -71,27 +72,30 @@ a {
     height: 50px;
     top:50%;
 }
-.btn {
-  padding: 0.6rem 1.3rem;
-  background-color: rgb(164, 181, 164);
-  border: 2px solid #040404;
-  font-size: 0.7rem;
-  color: #040404;
-  line-height: 1;
-  border-radius: 25px;
-  outline: none;
-  cursor: pointer;
-  transition: 0.3s;
-  margin: 0;
-}
 
-.btn:hover {
-  background-color: transparent;
-  color: #040404;
-  transform: scale(1.3);
-  border: 2px solid #040404;
-  font-weight: bold;
-}
+.btn {
+    background: rgb(164, 181, 164) !important;
+    padding: 0.6rem 1.3rem;
+    background-color: rgb(164, 181, 164);
+    border: 2px solid #040404 !important;
+    font-size: 0.7rem;
+    color: #040404;
+    line-height: 1;
+    border-radius: 25px;
+    outline: none;
+    cursor: pointer;
+    transition: 0.3s;
+    margin: 0;
+  }
+  
+  .btn:hover {
+    background-color: transparent;
+    color: #040404;
+    transform: scale(1.3);
+    border: 2px solid #040404 !important;
+    font-weight: bold;
+  }
+  
 
 
 main{
@@ -123,8 +127,10 @@ main{
     align-items: center; 
  } */
  .card .btn{
+    /* position: fixed!important; */
      border-color: #040404;
      font-weight: bolder;
+    /* z-index: 1!important; */
  }
  
  .card {
@@ -171,6 +177,41 @@ main{
   }
 
   
+
+.wishlist-icon {
+   
+    color: rgb(60, 72, 60)!important;
+    height: 30px!important;
+    padding-left: 25px!important;
+    position: absolute!important;
+    z-index: 1!important;
+    margin: -83% 26%!important;
+}
+.wishlist-icon-konst{
+    color: rgb(60, 72, 60)!important;
+    height: 30px!important;
+    padding-left: 25px!important;
+    position: absolute!important;
+    z-index: 1!important;
+    margin: -99% 26%!important;
+}
+
+.wishlist-icon-inredning{
+    color: rgb(60, 72, 60)!important;
+    height: 30px!important;
+    padding-left: 25px!important;
+    position: absolute!important;
+    z-index: 1!important;
+    margin: -103% 26%!important;
+}
+
+
+.card-text-pris{
+    text-align: start!important;
+    padding-left: 15px!important;
+}
+
+
   /* footer */
 
  .credit{
@@ -246,6 +287,16 @@ main{
       text-transform: capitalize;
   }
   
+  .info-text{
+    color: rgba(4, 4, 4, 0.75);
+    /* margin: 10px 0; */
+    text-transform: none;
+   font-weight: bolder;
+   line-height: 1.6;
+   font-size: 16px;
+   
+   }
+
   .footer-title{
       font-size: 20px;
       font-weight: 700;
@@ -294,4 +345,5 @@ main{
      color:#FBAB7E;
      font-weight: bold;
    } 
+  
    
