--- a/css/style.css
+++ b/css/style.css
@@ -75,9 +75,10 @@ a {
 
 
 .btn {
+  background: rgb(164, 181, 164) !important;
   padding: 0.6rem 1.3rem;
   background-color: rgb(164, 181, 164);
-  border: 2px solid #040404;
+  border: 2px solid #040404 !important;
   font-size: 0.7rem;
   color: #040404;
   line-height: 1;
@@ -92,7 +93,7 @@ a {
   background-color: transparent;
   color: #040404;
   transform: scale(1.3);
-  border: 2px solid #040404;
+  border: 2px solid #040404 !important;
   font-weight: bold;
 }
 
@@ -577,10 +578,18 @@ justify-content: space-between;
      color: #080808;
      font-size: 20px;
      font-weight: 700;
-   
      margin-bottom: 10px;
  }
  
+
+.footer-title-about{
+  text-transform: capitalize;
+  color: #080808;
+  font-size: 20px;
+  font-weight: 700;
+  padding-top: 20px;
+}
+
  .category .footer-link{
      text-decoration: none;
      text-transform: capitalize;
@@ -594,8 +603,18 @@ justify-content: space-between;
      color: rgba(4, 4, 4, 0.75);
      /* margin: 10px 0; */
      text-transform: capitalize;
+ 
  }
  
+ .info-text{
+  color: rgba(4, 4, 4, 0.75);
+  /* margin: 10px 0; */
+  text-transform: none;
+ font-weight: bolder;
+ line-height: 1.6;
+ font-size: 16px;
+ 
+ }
  .footer-title{
      font-size: 20px;
      font-weight: 700;
