--- a/css/wishlist.css
+++ b/css/wishlist.css
@@ -1,3 +1,9 @@
+*{
+    
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body{
     margin: 0;
     padding: 0;
@@ -11,9 +17,7 @@ a {
  color: rgb(143, 164, 143);
 }
 
-/* main{
-    padding-right: 40px;
-} */
+
 .logga-text {
     cursor: pointer;
     text-align: center;
@@ -41,7 +45,7 @@ a {
     }
 
 .shoppingcart{  
-    color: rgb(11, 11, 11);
+    color: #040404;
     padding-left: 15px;
     transition: 0.3s;
     }
@@ -51,7 +55,7 @@ a {
     }
    
 .header-user{
-    color: rgb(11, 11, 11);
+    color:  #040404;
     transition: 0.3s;
 }   
 .header-user:hover{
@@ -68,16 +72,16 @@ a {
 }
 
 .btn-sm{
-  
-    color: rgb(164, 181, 164); 
     height: 50px;
     top:50%;
 }
 
+
 .btn {
+    background: rgb(164, 181, 164) !important;
     padding: 0.6rem 1.3rem;
     background-color: rgb(164, 181, 164);
-    border: 2px solid #040404;
+    border: 2px solid #040404 !important;
     font-size: 0.7rem;
     color: #040404;
     line-height: 1;
@@ -92,75 +96,56 @@ a {
     background-color: transparent;
     color: #040404;
     transform: scale(1.3);
-    border: 2px solid #040404;
+    border: 2px solid #040404 !important;
     font-weight: bold;
   }
   
+ 
 
-main{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-}
-
-/* shop kort */
-
-.shop-kort-rubrik{
+  .text{
+    text-decoration: underline;
     text-align: center;
-     font-size: 28px;
-     font-weight: bolder;
-    padding-top: 40px;
-    transition: 0.3s;
- }
- .shop-kort-rubrik:hover{
-     transform: scale(1.2);
- }
- .card-group{
-
-    display: grid;
-    grid-template-columns: auto auto auto;
-    grid-gap: 10px;
- margin-bottom: 80px;
- /* margin-left: 40px;
- margin-right: 40px; */
- /* text-align: center; */
- padding-left: 40px;
- padding-right: 40px;
+    padding-top: 170px;
+    height: 500px;
+    font-size: 40px;
+    color: #040404;
+  }
 
 
- } 
-
- .card .btn{
-     border-color: #040404;
-     font-weight: bolder;
- }
- 
-.card-group{
-    margin-top: 80px!important;
+  .text-carousel1{
+    /* position: absolute; */
+    top: 20%;
+    left: 10%;
+    /* transform: translate(-20%, -20%); */
+    font-size: 28px;
+    font-weight: bolder;
+}
+.text-carousel2{
+    /* position: absolute; */
+    top: 31%;
+    left: 10%;
+    /* transform: translate(-20%, -20%); */
+    font-size: 20px;
+    font-weight: bolder;
 }
 
- .card{
-     text-align: center;
-     /* margin-left: 80px; */
-     /* margin-right: 80px; */
-     margin-top: 40px;
-     font-weight: bolder;
-     margin: 15px 30px 15px 30px!important;
-     
-     
-     
-  }
-  
+.handla-start{
+    /* position: absolute; */
+    top: 36%;
+    left: 10%;
+    border-radius: 15px;
+    padding: 8px;
+    font-weight: bolder;
+    transition: 0.3s;
+}
 
-  .card img{
-    height: 300px;
-  }
- 
-  
+.handla-start:hover{
+    transform: scale(1.2);
+}
+
   /* footer */
 
- .credit{
+  .credit{
     text-align: center;
     color:#040404;
     font-family: Merienda, sans-serif;
@@ -211,7 +196,7 @@ main{
   .category-title{
       grid-column: span 3;
       text-transform: capitalize;
-      color: #080808;
+      color:  #040404;
       font-size: 20px;
       font-weight: 700;
     
@@ -221,7 +206,7 @@ main{
   .category .footer-link{
       text-decoration: none;
       text-transform: capitalize;
-      color: rgba(9, 8, 8, 0.75);
+      color: rgba(4, 4, 4, 0.75);
   }
   
   .footer-link:hover{
@@ -233,11 +218,22 @@ main{
       text-transform: capitalize;
   }
   
+
+  .info-text{
+    color: rgba(4, 4, 4, 0.75);
+    /* margin: 10px 0; */
+    text-transform: none;
+   font-weight: bolder;
+   line-height: 1.6;
+   font-size: 16px;
+   
+   }
+
   .footer-title{
       font-size: 20px;
       font-weight: 700;
       margin-top: 30px;
-      color: #060606;
+      color: #040404;
   }
   
   .footer-social-container{
@@ -265,7 +261,7 @@ main{
       left: 0;
       bottom: 0;
       text-align: center;
-      color: #090909;
+      color:  #040404;
       background: rgba(0, 0, 0, 0.2);
   }
  
