--- a/css/shop.css
+++ b/css/shop.css
@@ -1,220 +1,498 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
+
+*{
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
 body{
+   
     margin: 0;
     padding: 0;
-    background-color: rgba(125, 149, 125, 0.855);
+    background-color: rgba(125, 149, 125, 0.855)!important;
     font-family: 'M PLUS Rounded 1c', sans-serif;
     font-family: 'Merienda', cursive;
     color: #040404;
 }
 
-a {
- color: rgb(143, 164, 143);
-}
+/* header{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 99;
+  background-color: #ff4757;
+} */
 
-
-.logga-text {
-    cursor: pointer;
-    text-align: center;
-    font-size: 50px;
-    font-family: Merienda;
-    font-weight:bolder;
-    padding: 1%;
-    transition: 0.3s;
-}
-.logga-text:hover{
-    transform: scale(1.2);
-}
-.nav-bar{
-    background-color: rgb(143, 164, 143);
-     width: 100%;
-     position: fixed;
-    z-index: 1;
-
-    padding-left: 10px;
-    padding-right: 10px;
-    justify-content:space-between;
-    align-items: center;
-    display: flex;
-    flex-direction: row;
-
-    }
-    .shoppingcart{  
-        color: rgb(11, 11, 11);
-        padding-left: 15px;
-        transition: 0.3s;
-        }
-    .shoppingcart:hover{
-        transform: scale(1.4);
-    }
+/* a {
+    color: rgb(143, 164, 143);
+   }
+    */
    
-.header-user{
-
-    color: rgb(11, 11, 11);
-    transition: 0.3s;
+   .logga-text {
+       cursor: pointer;
+       text-align: center;
+       font-size: 50px;
+       font-family: Merienda;
+       font-weight:bolder;
+       padding: 1%;
+       transition: 0.3s;
+       padding-left: 18%;
+   }
+   .logga-text:hover{
+       transform: scale(1.2);
+   }
+   .nav-bar{
+    /* max-width: 1200px; */
+    margin: auto;
+       background-color: rgb(143, 164, 143);
+        width: 100%;
+        position: fixed;
+       z-index: 1;
    
-}   
-.header-user:hover{
-    transform: scale(1.4);
-}
-.frontpage-text{
-    position: absolute;
-    z-index: 1;
-    margin: 10% 10%;
-}
+       padding-left: 10px;
+       padding-right: 20px;
+       justify-content:space-between;
+       align-items: center;
+       display: flex;
+       flex-direction: row;
+       }
 
-.dropdown-menu{
-    min-width: auto;
-}
+       .shoppingcart{ 
+           padding-left: 15px;
+           transition: 0.3s;
+           }
+       .shoppingcart:hover{
+           transform: scale(1.4);
+       }
+       header{
+        margin-bottom: 50px!important;
+      }  
 
-.btn-sm{
-  
-    color: rgb(164, 181, 164); 
-    height: 50px;
-    top:50%;
-}
-
-.btn {
-    background: rgb(164, 181, 164) !important;
-    padding: 0.6rem 1.3rem;
-    background-color: rgb(164, 181, 164);
-    border: 2px solid #040404 !important;
-    font-size: 0.7rem;
-    color: #040404;
-    line-height: 1;
-    border-radius: 25px;
-    outline: none;
-    cursor: pointer;
-    transition: 0.3s;
-    margin: 0;
-  }
-  
-  .btn:hover {
-    background-color: transparent;
-    color: #040404;
-    transform: scale(1.3);
-    border: 2px solid #040404 !important;
-    font-weight: bold;
-  }
-  
-
-
-main{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    padding-bottom: 40px;
-  
-}
-/* shop kort */
-
-.shop-kort-rubrik{
-    text-align: center;
-     font-size: 28px;
-     font-weight: bolder;
-    padding-top: 40px;
-    transition: 0.3s;
- }
- .shop-kort-rubrik:hover{
-     transform: scale(1.2);
- }
- /* .card-group{
-     display: flex;
- justify-content: space-between;
- 
-     width: 80%;
-     display: flex;
-    align-items: center; 
- } */
- .card .btn{
-    /* position: fixed!important; */
-     border-color: #040404;
-     font-weight: bolder;
-    /* z-index: 1!important; */
- }
- 
- .card {
-     text-align: center;
-     margin-left: 80px;
-     margin-right: 80px;
-     margin-top: 40px;
-     font-weight: bolder;
-  }
-  
-
-  .card img{
-    height: 300px;
-  }
- 
-
-
-.logga {
-    position: relative;
-    height: 50px;
-}
-
- 
-.btn {
-    padding: 0.6rem 1.3rem;
-    background-color: rgb(164, 181, 164);
-    border: 2px solid #040404;
-    font-size: 0.7rem;
-    color: #040404;
-    line-height: 1;
-    border-radius: 25px;
-    outline: none;
-    cursor: pointer;
-    transition: 0.3s;
-    margin: 0;
-  }
-  
-  .btn:hover {
-    background-color: transparent;
-    color: #040404;
-    transform: scale(1.3);
-    border: 2px solid #040404;
-    font-weight: bold;
-  }
-
-  
-
-.wishlist-icon {
+   .header-user{
+       color: rgb(11, 11, 11);
+       transition: 0.3s;
+      
+   }   
+   .header-user:hover{
+       transform: scale(1.4);
+   }
+   .frontpage-text{
+       position: absolute;
+       z-index: 1;
+       margin: 10% 10%;
+   }
    
-    color: rgb(60, 72, 60)!important;
-    height: 30px!important;
-    padding-left: 25px!important;
-    position: absolute!important;
-    z-index: 1!important;
-    margin: -83% 26%!important;
+   .dropdown-menu{
+       min-width: auto;
+   }
+   
+   .btn-sm{
+     
+       color: rgb(164, 181, 164); 
+       height: 50px;
+       top:50%;
+   }
+   
+   .btn {
+       background: rgb(164, 181, 164) !important;
+       padding: 0.6rem 1.3rem;
+       background-color: rgb(164, 181, 164);
+       border: 2px solid #040404 !important;
+       font-size: 0.7rem;
+       color: #040404;
+       line-height: 1;
+       border-radius: 25px;
+       outline: none;
+       cursor: pointer;
+       transition: 0.3s;
+       margin: 0;
+     }
+     
+     .btn:hover {
+       background-color: transparent;
+       color: #040404;
+       transform: scale(1.3);
+       border: 2px solid #040404 !important;
+       font-weight: bold;
+     }
+     
+ 
+
+  
+/* infogat-card */
+
+/* .nav{
+  max-width: 1200px;
+  margin: auto;
+  width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+} */
+
+/* .logo{
+  font-size: 1.1rem;
+  font-weight: 900;
+  text-decoration: none;
+  text-transform: uppercase;
+  color:#ffffff;
+} */
+
+.box{
+display: flex;
+flex-direction: row;
+color:white;
+text-align: center;
+position: relative;
+gap: 10px;
+justify-content: center;
+align-items: center;
 }
-.wishlist-icon-konst{
-    color: rgb(60, 72, 60)!important;
-    height: 30px!important;
-    padding-left: 25px!important;
-    position: absolute!important;
-    z-index: 1!important;
-    margin: -99% 26%!important;
+
+.cart-count{
+  position: absolute;
+  background-color: #2f3542;
+  top: -5px;
+  right: 0;
+  padding: 3px;
+  height: 20px;
+  width: 20px;
+  line-height:20px ;
+  border-radius: 50%;
+  z-index: 99;
 }
 
-.wishlist-icon-inredning{
-    color: rgb(60, 72, 60)!important;
-    height: 30px!important;
-    padding-left: 25px!important;
-    position: absolute!important;
-    z-index: 1!important;
-    margin: -103% 26%!important;
+#cart-icon{
+    height: 40px;
+    width: 40px;
+  /* font-size: 1.5rem; */
+  cursor: pointer;
+  /* padding-top: 10px; */
+ 
+
+}
+
+img{
+  width: 100%;
+}
+
+.container{
+  max-width: 1200px;
+  padding: 4.7rem;
+  margin: auto;
+  width: 100%;
+}
+
+h2.title{
+  font-size: 1.1rem;
+  font-weight: 500;
+  margin-bottom: 1.5rem;
+  color:#ffffff;
+}
+
+.shop-content{
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(220px,auto));
+  gap:1.5rem;
+  justify-content: center;
+  align-content: center;
+}
+
+.product-box{
+  position: relative;
+  background-color: #fff;
+  padding: 10px;
+  box-shadow: 0 1px 4px rgba(40, 37, 37, 0.1);
+  border-radius: 10px;
+  text-align: center;
+}
+
+.product-box .btn{
+  font-size: 14px;
+ }
+
+ .product-box .btn:hover {
+  transform: none;
 }
 
 
-.card-text-pris{
-    text-align: start!important;
-    padding-left: 15px!important;
+
+
+.pic{
+  overflow: hidden;
+}
+
+.pic:hover img{
+transform: scale(1.5);
+}
+
+.food-img{
+  transition: 0.4s;
+  aspect-ratio: 1/1;
+  object-fit: cover;
+}
+
+.food-title{
+  font-size: 1rem;
+  font-weight: 600;
+  color:#ff6348;
+}
+
+.food-price{
+  font-weight:500 ;
+
+}
+
+.add-cart{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  background-color: rgb(109, 131, 109);
+  color:white;
+  padding: 10px;
+  font-size: 1.7rem;
+  cursor: pointer;
+  transition: 0.5s;
+  border-radius: 10px;
+}
+
+.add-cart:hover{
+  background-color:rgba(142, 3, 3, 0.786);
+}
+  
+
+.cart{
+  position: fixed;
+  top: 0;
+  right: -100%;
+  width: 400px;
+  height: 100vh;
+  overflow-y: auto;
+  overflow-x: hidden;
+  padding: 20px;
+  background-color: white;
+  box-shadow: 0 1px 4px rgba(40, 37, 37, 0.1);
+  z-index: 100;
+}
+
+.cart-active{
+  right:0;
+  transition: 0.5s;
+}
+
+.cart-title{
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-bottom: 1rem;
+  padding-bottom:20px ;
+  border-bottom: 1px solid rgba(0,0,0,0.1);
+}
+
+.cart-box{
+  display: grid;
+  grid-template-columns: 32% 50% 18%;
+  align-items: center;
+  gap: 1rem;
+  margin-top: 1rem;
+  border-bottom: 1px solid rgba(0,0,0,0.1);
+  padding-bottom: 10px;
+}
+
+.cart-img{
+  width: 75px;
+  height: 75px;
+  object-fit: cover;
+  border:2px solid  rgba(0,0,0,0.1);
+  padding: 5px;
+}
+.detail-box{
+  display: grid;
+  row-gap: 0.5rem;  
+}
+
+.price-box{
+  display: flex;
+    justify-content: space-between; 
+}
+
+.cart-food-title{
+   font-size: 1rem;
+   text-transform: uppercase;
+   color:#ff6348;
+   font-weight: 500;
+}
+
+.cart-price{
+  font-weight: 500;
+}
+
+.cart-quantity{
+  border:1px solid rgba(0,0,0,0.1);
+  outline:none ;
+  width: 2.4rem;
+  text-align: center;
+  font-size: 1rem;
+}
+
+.cart-remove{
+  font-size: 24px;
+  color:rgba(142, 3, 3, 0.786);
+  cursor: pointer;
+}
+
+.total{
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 1.5rem;
+}
+
+.total-title{
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+.total-price{
+  margin-left: 0.5rem;
+}
+
+.btn-buy{
+  padding: 12px 20px;
+  background-color:#2f3542;
+  color:#fff;
+  border: none;
+  font-size: 1rem;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+#cart-close{
+  position: absolute;
+  top: 1rem;
+  right: 0.8rem;
+  font-size: 2rem;
+  cursor: pointer;
 }
 
 
-  /* footer */
 
- .credit{
+.card-carusel{
+  width: 16,66%;
+}
+
+/* card-carusel */
+
+
+* {
+  box-sizing: border-box;
+}
+
+img {
+  vertical-align: middle;
+}
+
+/* Position the image container (needed to position the left and right arrows) */
+.container {
+  position: relative;
+}
+
+/* Hide the images by default */
+.mySlides,
+.mySlides__3
+{
+  display: none;
+}
+
+/* Add a pointer when hovering over the thumbnail images */
+.cursor {
+  cursor: pointer;
+}
+
+/* Next & previous buttons */
+/* .prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 40%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+} */
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+} 
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Number text (1/3 etc) */
+/* .numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+} */
+
+/* Container for image text */
+.caption-container {
+  /* height: 30px; */
+  text-align: center;
+  background-color: #222;
+  padding: 2px 16px;
+  color: rgb(255, 255, 255);
+}
+/* #caption{
+  font-size: 40px;
+  color: blue;
+} */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.product-box .row{
+ margin: 0;
+} 
+
+/* Six columns side by side */
+.product-box .column {
+  float: left;
+ width: 16.66%;
+ padding: 0;
+}
+
+/* Add a transparency effect for thumnbail images */
+.demo {
+  opacity: 0.6;
+}
+
+.active,
+.demo:hover {
+  opacity: 1;
+}
+
+/* footer */
+
+.credit{
     text-align: center;
     color:#040404;
     font-family: Merienda, sans-serif;
@@ -288,15 +566,15 @@ main{
   }
   
   .info-text{
-    color: rgba(4, 4, 4, 0.75);
-    /* margin: 10px 0; */
-    text-transform: none;
-   font-weight: bolder;
-   line-height: 1.6;
-   font-size: 16px;
-   
-   }
-
+     color: rgba(4, 4, 4, 0.75);
+     /* margin: 10px 0; */
+     text-transform: none;
+    font-weight: bolder;
+    line-height: 1.6;
+    font-size: 16px;
+    
+    }
+ 
   .footer-title{
       font-size: 20px;
       font-weight: 700;
@@ -345,5 +623,44 @@ main{
      color:#FBAB7E;
      font-weight: bold;
    } 
-  
    
+/* testcarusell askar */
+
+/* Main carousel style */
+.carousel {
+  width: 253px;
+  padding-right: 8px;
+}
+
+/* Indicators list style */
+.article-slide .carousel-indicators {
+  bottom: 0;
+  left: 0;
+  margin-left: 5px;
+  width: 100%;
+}
+/* Indicators list style */
+.article-slide .carousel-indicators li {
+  border: medium none;
+  border-radius: 0;
+  float: left;
+  height: 54px;
+  margin-bottom: 5px;
+  margin-left: 0;
+  margin-right: 5px !important;
+  margin-top: 0;
+  width: 24%;
+  padding-right: 13px;
+}
+/* Indicators images style */
+.article-slide .carousel-indicators img {
+  border: 2px solid #FFFFFF;
+  float: left;
+  height: 54px;
+  left: 0;
+}
+/* Indicators active image style */
+.article-slide .carousel-indicators .active img {
+  border: 2px solid #0e0e0e;
+  opacity: 0.7;
+}
