--- a/css/konto.css
+++ b/css/konto.css
@@ -101,7 +101,6 @@ a {
     font-weight: bold;
   }
 
-  
 .container{
     width: 50%;
     min-height: 100vh;
@@ -111,6 +110,8 @@ a {
     align-items: center;
     background:  rgb(97, 112, 97);
     font-family: 'roboto', sans-serif;
+    padding-bottom: 10px !important;
+    margin-bottom: 100px !important;
 }
 
 .loader{
@@ -154,7 +155,7 @@ textarea{
     width: 300px;
     height: 40px;
     text-align: center;
-    line-height: 40px;
+    line-height: 25px;
     background: #383838;
     color: #fff;
     border-radius: 2px;
@@ -163,6 +164,8 @@ textarea{
     cursor: pointer;
     display: block;
     margin: 30px 0;
+    font-size: 16px;
+    
 }
 
 /* checkbox styles */
