--- a/css/product-sidor.css
+++ b/css/product-sidor.css
@@ -13,7 +13,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Barlow', sans-serif;
+    /* font-family: 'Barlow', sans-serif; */
 }
 
 body {
@@ -165,7 +165,15 @@ header .head-container {
 
 /* js related class */
 .show-navbar {
+    padding-top: 10px;
+    justify-content: center;
+    align-items: center;
+    width: 140px;
     height: 204px;
+    background-color: rgb(164, 181, 164);
+    border-radius: 15px;
+    left: 8%;
+    border: 2px solid #040404 ;
 }
 
 /*  */
@@ -337,6 +345,13 @@ header .head-container {
     font-weight: 500;
 }
 
+/* informationstext kassasida, kontosida mfl. */
+.text-sid-information{
+padding-top: 20%;
+padding-left: 30%;
+padding-bottom: 12%;
+
+}
 
 
 /* products */
